<resources>
    <string name="app_name">UVGMovil</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_signout">Sign Out</string>
    <string name="title_activity_principal">UVG Movil</string>
    <string name="title_activity_pago">Pago</string>
    <string name="title_activity_info_pago">Información Pago</string>
    <string name="alerta_de_pago">Alerta de Pago</string>
    <string name="switch_str">Activar</string>
    <string name="switch_status">Notificaciones</string>
    <string name="title_activity_info">Información</string>
    <string name="title_activity_news">News</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_carrerasb">Carreras</string>
    <string name="title_activity_carrerasing">Ingeniería</string>
    <string name="title_activity_carrerasedu">Educación</string>
    <string name="title_activity_carrerasCCHH">Ciencias y Humanidades</string>
    <string name="title_activity_carrerasCCSS">Ciencias Sociales</string>
    <string name="title_activity_uvghoy">UVG Hoy</string>
    <string name="title_activity_comunidad__uvg">Comunidad UVG</string>
    <string name="title_activity_bienestar__estudiantil">Bienestar_Estudiantil</string>
    <string name="title_activity_m_web_browser">mWebBrowser</string>
    <string name="title_activity_egresados">Egresados</string>
    <string name="title_activity_deportes">Deportes</string>
    <string name="title_activity_torneos_internos">Torneos Internos</string>
    <string name="title_activity_entrenos__deportivos">Entrenos Deportivos</string>
    <string name="title_activity_fut4_est">Futbol4 Estudiantes</string>
    <string name="title_activity_fut4_col">Futbol 4 Colaboladores</string>
    <string name="title_activity_baloncesto">Baloncesto</string>
    <string name="title_activity_volley">Volley Ball</string>
    <string name="title_activity_asociaciones">Asociaciones</string>
    <string name="title_activity_arte_cultura">Arte y Cultura</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_portal">Portal</string>
    <string name="title_activity_m_images">mImages</string>
    <string name="title_activity_consulta_saldo">ConsultaSaldo</string>
    <string name="saldo_vencido">Saldo vencido:</string>
    <string name="saldo_p_vencer">Saldo por vencer:</string>
    <string name="saldo_p_cargar">Saldo por cargar:</string>
    <string name="title_activity_contacto">Contacto</string>
    <string name="title_activity_consulta_parqueo">ConsultaParqueo</string>
    <string name="parqueo_asignado">Parqueo asignado:</string>
    <string name="title_activity_consulta_notas">Consulta Notas</string>
    <string name="codigo_curso">Mi Rendimiento:</string>
</resources>
